--- a/ID-Card/dockerfile
+++ b/ID-Card/dockerfile
@@ -3,4 +3,4 @@ FROM node:20.10.0-alpine
 WORKDIR /app
 COPY . .
 RUN npm install -g @angular/cli
-CMD [ "ng", "serve", "--open" ]
+CMD ng serve --host 0.0.0.0 --port 4200
